# pythonWPF

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/book/: main.py
src/book/entity/: __init__.py  publisher_entity.py
src/book/repository/: author_repository.py  book_repository.py  database.py  publisher_repository.py
src/book/router/: __init__.py  author_router.py  book_router.py  book_write_router.py  dependencies.py  health_router.py  page.py  publisher_router.py
src/book/service/: __init__.py  author_service.py  book_service.py  email_service.py  publisher_service.py
src/buch/: __init__.py  main.py
src/buch/config/: __init__.py
src/buch/entity/: __init__.py  author_entity.py  autor_entity.py  book_entity.py  buch_entity.py  verlag_entity.py
src/buch/graphql_api/: __init__.py
src/buch/repository/: author_repository.py  book_repository.py  database.py  errors.py  mock_repo.py  publisher_repository.py  sqlite_repo.py
src/buch/router/: __init__.py  author_router.py  autor_router.py  book_router.py  book_write_router.py  buch_router.py  buch_update_model.py  buch_write_router.py  constants.py  dependencies.py  page.py  publisher_router.py  verlag_router.py
src/buch/security/: __init__.py
src/buch/service/: __init__.py  author_service.py  autor_service.py  book_service.py  email_service.py  publisher_service.py  verlag_service.py
src/buch/static/: README.md
src/buch/templates/: books.html  index.html
tests/: test_book_endpoints.py
